umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_test_012.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 34
sum_formula: C22N4O6
graph6: "_hEG`?C_C??_??A?_?G?@??C?AG??_?@??????AG???_??@???@???G_???_???O????O???_???@?????A?"
