umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_test_013.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 38
bond_count: 40
sum_formula: C28N4O6
graph6: ehEG___G?GO?_?@????O@??C??G??G?@C??C??@???O??@????????__???G???@????C???AG????_????_????_????G?????G????O?????_?????@??
