umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_test_020.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 54
bond_count: 56
sum_formula: C38N6O10
graph6: uhEIA?GA?_A?G?G??_C??_??C???????C??@???G???_??P???O?C?O???@????O???C????O???@????@?????C????_????C??????_?????????????_?????G?????@??????C?????AG?????A?????_A???????G??????A???????_??????A???????G???????G????????_??????C????????_????????C??
